k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-spring-boot-eks
  namespace: hello-spring-boot-eks
spec:
  type: ClusterIP
  selector:
    app: hello-spring-boot-eks
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
